finish/pejman-javid/added a three file

--- a/three.js/index.html
+++ b/three.js/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script ></script>
-    <title>calculator</title>
+    <title>three</title>
 </head>
 <body>
-    <h2>MY CALCULATOR</h2>
-    <script src="./index.js"></script>
+    <h1>javascript</h1>
+    <script src="./index3.js" src="./index2.js" src="./index1.js"></script>
 </body>
 </html>
