finish/pejman-javid/added a fourth project of js

--- a/four.js/index1/index.html
+++ b/four.js/index1/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>three</title>
+    <title>the fourth</title>
 </head>
 <body>
-    <h1>javascript</h1>
-    <script src="./index3.js" src="./index2.js" src="./index1.js"></script>
+    <h1>JAVASCRIPT</h1>
+    <SCRIPT src="./index1.js"></SCRIPT>
 </body>
 </html>
+
