--- a/five.js/index.html
+++ b/five.js/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the fourth</title>
+    <title>five</title>
 </head>
 <body>
-    <h1>JAVASCRIPT</h1>
-    <SCRIPT src="./index1.js"></SCRIPT>
+    <script src="./index.js"></script>
 </body>
 </html>
-
