--- a/seventh.js/index.html
+++ b/seventh.js/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sixth</title>
+    <title>seventh</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <script src="./index.js"></script>
+    <script src="./dist/index.js"></script>
 </body>
 </html>
